2016-02-17  Jean-Louis Martineau <martineau@zmanda.com>
	* client-src/sendbackup.c: Fix
	* client-src/selfcheck.c: Fix

2016-02-17  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/ssl-security.c: s/remote_port/client_port/

2016-02-17  Jean-Louis Martineau <martineau@zmanda.com>
	* client-src/amdump_client.pl: Remove printing the config
	* installcheck/amdump_client.pl: Fix

2016-02-17  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Report/human.pm: Improve output
	* installcheck/catalogs/bigestimate.cat,
	  installcheck/catalogs/doublefailure.cat,
	  installcheck/catalogs/longstrange.cat,
	  installcheck/catalogs/resultsmissing.cat,
	  installcheck/catalogs/retried-nofinish.cat,
	  installcheck/catalogs/retried.cat,
	  installcheck/catalogs/shortstrange.cat,
	  installcheck/catalogs/skipped.cat: Fix for report change

2016-02-17  Jean-Louis Martineau <martineau@zmanda.com>
	* xfer-src/source-file.c: Cleanup
	* xfer-src/xmsg.h: Fix comment

2016-02-17  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/security-util.c: Fix hang if receive partial packet from
	  network

2016-02-16  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Status.pm, perl/Amanda/Taper/Scribe.pm,
	  server-src/driver.c: s/writting/writing/g

2016-02-11  Jean-Louis Martineau <martineau@zmanda.com>
	* client-src/sendbackup-gnutar.c, client-src/sendsize.c: Init mlist
	  to NULL

2016-02-11  Jean-Louis Martineau <martineau@zmanda.com>
	* config/amanda/amanda_configure.m4 (AM_INIT_AUTOMAKE): Add
	  subdir-objects
	* amandad-src/Makefile.am, amar-src/Makefile.am,
	  application-src/Makefile.am, client-src/Makefile.am,
	  common-src/Makefile.am, device-src/Makefile.am,
	  installcheck/Makefile.am, ndmp-src/Makefile.am,
	  oldrecover-src/Makefile.am, perl/Makefile.am,
	  perl/amglue/Makefile.am, po/Makefile.am,
	  recover-src/Makefile.am, server-src/Makefile.am,
	  xfer-src/Makefile.am: Cleanup
	  s/INCLUDES/AM_CPPFLAGS/
	  s/mkdir_p/MKDIR_P/
